--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
+    "@angular/localize": "~13.2.0",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.0",
     "@nrwl/angular": "13.8.2",
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.1.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
