--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -2,11 +2,13 @@
   "projectType": "application",
   "root": "apps/client",
   "sourceRoot": "apps/client/src",
-  "prefix": "indokku-platform",
+  "prefix": "indev",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/client",
         "index": "apps/client/src/index.html",
@@ -14,8 +16,13 @@
         "polyfills": "apps/client/src/polyfills.ts",
         "tsConfig": "apps/client/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": ["apps/client/src/favicon.ico", "apps/client/src/assets"],
-        "styles": ["apps/client/src/styles.scss"],
+        "assets": [
+          "apps/client/src/favicon.ico",
+          "apps/client/src/assets"
+        ],
+        "styles": [
+          "apps/client/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -80,7 +87,9 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/client"],
+      "outputs": [
+        "coverage/apps/client"
+      ],
       "options": {
         "jestConfig": "apps/client/jest.config.js",
         "passWithNoTests": true
