--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "indokku-platform",
+  "name": "indev",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -20,10 +20,15 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.0",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0",
     "@nrwl/angular": "13.8.2",
+    "@nrwl/nest": "^13.8.2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -36,11 +41,15 @@
     "@angular/cli": "~13.2.0",
     "@angular/compiler-cli": "~13.2.0",
     "@angular/language-service": "~13.2.0",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "13.8.2",
     "@nrwl/cypress": "13.8.2",
     "@nrwl/eslint-plugin-nx": "13.8.2",
     "@nrwl/jest": "13.8.2",
     "@nrwl/linter": "13.8.2",
+    "@nrwl/nest": "13.8.2",
+    "@nrwl/node": "13.8.2",
     "@nrwl/tao": "13.8.2",
     "@nrwl/workspace": "13.8.2",
     "@types/jest": "27.0.2",
