--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.2.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/microservices": "^8.3.1",
     "@nestjs/platform-express": "^8.0.0",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0",
     "@nrwl/angular": "13.8.2",
