--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,7 @@
     "api": "apps/api",
     "client": "apps/client",
     "client-e2e": "apps/client-e2e",
+    "db": "libs/db",
     "worker": "apps/worker"
   }
 }
