--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "db:sync": "prisma generate",
+    "db:studio": "prisma studio",
+    "db:migrate": "prisma migrate dev"
   },
   "private": true,
   "dependencies": {
@@ -28,7 +31,10 @@
     "@nrwl/angular": "13.8.2",
     "@nrwl/nest": "^13.8.2",
     "@popperjs/core": "^2.10.2",
+    "@prisma/client": "3.9.2",
     "bootstrap": "^5.1.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
@@ -64,6 +70,7 @@
     "jest": "27.2.3",
     "jest-preset-angular": "11.1.1",
     "prettier": "^2.5.1",
+    "prisma": "^3.9.2",
     "ts-jest": "27.0.5",
     "typescript": "~4.5.2"
   }
