--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0",
-    "@nrwl/angular": "13.8.2",
     "@popperjs/core": "^2.10.2",
     "@prisma/client": "3.9.2",
     "bootstrap": "^5.1.3",
@@ -48,12 +47,13 @@
     "@angular/language-service": "~13.2.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@nrwl/angular": "^13.8.3",
     "@nrwl/cli": "13.8.2",
     "@nrwl/cypress": "13.8.2",
     "@nrwl/eslint-plugin-nx": "13.8.2",
     "@nrwl/jest": "13.8.2",
     "@nrwl/linter": "13.8.2",
-    "@nrwl/nest": "13.8.2",
+    "@nrwl/nest": "^13.8.3",
     "@nrwl/node": "13.8.2",
     "@nrwl/tao": "13.8.2",
     "@nrwl/workspace": "13.8.2",
