--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@nrwl/cypress": "13.8.2",
     "@nrwl/eslint-plugin-nx": "13.8.2",
     "@nrwl/jest": "13.8.2",
+    "@nrwl/js": "^13.8.3",
     "@nrwl/linter": "13.8.2",
     "@nrwl/nest": "^13.8.3",
     "@nrwl/node": "13.8.2",
