--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
-    "start": "nx serve",
-    "build": "nx build",
+    "start": "node dist/apps/api/main.js",
+    "build": "yarn nx run-many --target=build --projects=client,api --parallel=true",
+    "serve": "nx serve",
     "test": "nx test",
     "db:sync": "prisma generate",
     "db:studio": "prisma studio",
@@ -29,6 +30,7 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^2.2.2",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0",
     "@popperjs/core": "^2.10.2",
     "@prisma/client": "^3.10.0",
