--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "node dist/apps/api/main.js",
-    "build": "yarn nx run-many --target=build --projects=client,api --parallel=true",
+    "build": "prisma generate && yarn nx run-many --target=build --projects=client,api --parallel=true",
     "serve": "nx serve",
     "test": "nx test",
     "db:sync": "prisma generate",
